# amd-debug-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  amd_bios.py  amd_pstate.py  amd_pstate_triage.py  amd_s2idle.py  install_deps.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  mirror.yml
amd_debug/: common.py  installer.py  kernel_log.py  wake.py
docs/: amd-bios.md  amd-pstate.md  amd-s2idle.md  amd-ttm.md  in-tree.md
scripts/: amd-pstate-triage.py  amd_s2idle.py
src/: launcher.py  test_acpi.py  test_batteries.py  test_bios.py  test_common.py  test_database.py  test_display.py  test_failures.py  test_installer.py  test_kernel.py  test_launcher.py  test_power_rails.py  test_prerequisites.py  test_pstate.py  test_s2idle.py  test_sleep_report.py  test_ttm.py  test_validator.py  test_wake.py
src/amd_debug/: __init__.py  acpi.py  args.py  battery.py  bios.py  common.py  database.py  display.py  failures.py  installer.py  kernel.py  kernel_log.py  power_rails.py  prerequisites.py  pstate.py  s2idle-hook  s2idle.py  sleep_report.py  test_ttm.py  ttm.py  validator.py  wake.py
src/amd_debug/bash/: amd-s2idle
src/amd_debug/templates/: html  md  stdout  txt
test/: test_acpi.py  test_batteries.py  test_bios.py  test_common.py  test_database.py  test_failures.py  test_installer.py  test_kernel.py  test_kernel_log.py  test_launcher.py  test_prerequisites.py  test_pstate.py  test_s2idle.py  test_sleep_report.py  test_validator.py  test_wake.py
