[build-system]
requires = ["setuptools>=59.8.0", "setuptools-git-versioning>=2.0,<3", "argparse-manpage[setuptools]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
amd_debug = ["s2idle-hook"]
"amd_debug.templates" = ["*"]
"amd_debug.bash" = ["amd-s2idle"]

[tool.setuptools-git-versioning]
enabled = true

[tool.coverage.run]
branch = true
source = [
    "src", "test"
]
omit = ["src/launcher.py"]

[tool.setuptools.cmdclass]
build_py = "build_manpages.build_py"
install = "build_manpages.install"
build_manpages = "build_manpages.build_manpages"

[tool.build_manpages]
pythonpath = ["src"]
manpages = [
    "man/amd-s2idle.1:function=parse_args:pyfile=src/amd_debug/s2idle.py:prog=amd-s2idle",
    "man/amd-bios.1:function=parse_args:pyfile=src/amd_debug/bios.py:prog=amd-bios",
    "man/amd-pstate.1:function=parse_args:pyfile=src/amd_debug/pstate.py:prog=amd-pstate",
]

[project]
name = "amd-debug-tools"
authors = [{ name = "Mario Limonciello", email = "superm1@kernel.org" }]
description = "debug tools for AMD systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyudev",
    "packaging",
    "pandas",
    "jinja2",
    "tabulate",
    "seaborn",
    "cysystemd",
    "Jinja2",
    "matplotlib",
    "seaborn",
]
dynamic = ["version"]
license = "MIT"

[project.urls]
"Homepage" = "https://web.git.kernel.org/pub/scm/linux/kernel/git/superm1/amd-debug-tools.git/"

[project.scripts]
amd-s2idle = "amd_debug:amd_s2idle"
amd-bios = "amd_debug:amd_bios"
amd-pstate = "amd_debug:amd_pstate"
