[options]
package_dir=
    =src
packages = find_namespace:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    amd-s2idle = amd_debug:amd_s2idle
    amd-bios = amd_debug:amd_bios
    amd-pstate = amd_debug:amd_pstate

[options.package_data]
amd_debug = s2idle-hook
amd_debug.templates = *
amd_debug.bash = amd-s2idle
